# QwenASR

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_PROCESS.md  auto-research-changes.md  build.rs  program.md  release-please-config.json  report.md  results.tsv
.cargo/: config.toml
.github/workflows/: build-binaries.yml  publish-flutter.yml  release-please.yml
bench/: benchmark-all.sh  compare.sh  parse_stderr.sh  render_benchmark_report.py  run.sh  wer.py
bench/samples/: audio.txt
crates/qasr/: Cargo.toml
crates/qasr-cli/: Cargo.toml
crates/qasr-cli/src/: main.rs
crates/qasr/src/: align.rs  encoder.rs  jni_api.rs  lib.rs  safetensors.rs
crates/qasr/src/kernels/: mod.rs
crates/qasr/tests/: audio.rs  kernels.rs  regression.rs
crates/qwen-asr/: CHANGELOG.md  Cargo.toml  README.md
crates/qwen-asr-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/qwen-asr-cli/src/: download.rs  live_capture.rs  main.rs
crates/qwen-asr/src/: align.rs  audio.rs  c_api.rs  config.rs  context.rs  decoder.rs  encoder.rs  jni_api.rs  lib.rs  safetensors.rs  tokenizer.rs  transcribe.rs
crates/qwen-asr/src/kernels/: avx.rs  generic.rs  mod.rs  neon.rs
crates/qwen-asr/tests/: audio.rs  kernels.rs  regression.rs  tokenizer.rs
flutter/qasr/: README.md  pubspec.yaml
flutter/qasr/android/: build.gradle  settings.gradle
flutter/qasr/example/: README.md  pubspec.yaml
flutter/qasr/example/integration_test/: qasr_test.dart
flutter/qasr/example/lib/: main.dart
flutter/qasr/ios/: qasr.podspec
flutter/qasr/ios/Classes/: QasrPlugin.swift
flutter/qasr/lib/: qasr.dart
flutter/qasr/lib/src/: qasr_engine.dart
flutter/qasr/macos/: qasr.podspec
flutter/qasr/macos/Classes/: QasrPlugin.swift
flutter/qasr/rust/: Cargo.toml
flutter/qasr/rust_builder/: pubspec.yaml
flutter/qasr/rust_builder/android/: build.gradle  settings.gradle
flutter/qasr/rust_builder/ios/: rust_lib_qasr.podspec
flutter/qasr/rust_builder/linux/: CMakeLists.txt
flutter/qasr/rust_builder/macos/: rust_lib_qasr.podspec
flutter/qasr/rust_builder/windows/: CMakeLists.txt
flutter/qasr/test/: qasr_api_test.dart  qasr_test.dart
flutter/qwen_asr/: CHANGELOG.md  README.md  pubspec.yaml
flutter/qwen_asr/android/: build.gradle  settings.gradle
flutter/qwen_asr/example/: README.md  pubspec.yaml
flutter/qwen_asr/example/integration_test/: qwen_asr_test.dart
flutter/qwen_asr/example/lib/: main.dart
flutter/qwen_asr/ios/: qwen_asr.podspec
flutter/qwen_asr/ios/Classes/: QwenAsrPlugin.swift
flutter/qwen_asr/lib/: qwen_asr.dart
flutter/qwen_asr/lib/src/: qwen_asr_engine.dart
flutter/qwen_asr/macos/: qwen_asr.podspec
flutter/qwen_asr/macos/Classes/: QwenAsrPlugin.swift
flutter/qwen_asr/rust/: Cargo.toml
flutter/qwen_asr/rust/.cargo/: config.toml
flutter/qwen_asr/rust/src/api/: mod.rs  qwen_asr_bridge.rs
flutter/qwen_asr/rust_builder/: pubspec.yaml
flutter/qwen_asr/rust_builder/android/: build.gradle  settings.gradle
flutter/qwen_asr/test/: qwen_asr_api_test.dart  qwen_asr_test.dart
skills/qwen-asr/: SKILL.md
skills/qwen-asr/scripts/: install.sh  transcribe.sh
src/: audio.rs  c_api.rs  config.rs  context.rs  decoder.rs  encoder.rs  lib.rs  main.rs  tokenizer.rs  transcribe.rs
src/kernels/: avx.rs  generic.rs  mod.rs  neon.rs
tests/: audio.rs  kernels.rs  regression.rs  tokenizer.rs
(+30 files in other folders)
