[package]
name = "qwen-asr-cli"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "CLI for qwen-asr: Qwen3-ASR speech-to-text"

[[bin]]
name = "qwen-asr"
path = "src/main.rs"

[dependencies]
qwen-asr = { path = "../qwen-asr" }
ureq = "2"
ctrlc = "3"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
